--- a/css/style.css
+++ b/css/style.css
@@ -42,4 +42,42 @@ header {
     text-align: center;
 }
 
+/* Main */
+main {
+    height: calc(100vh - 80px);
+}
+
+.megablock {
+    height: 700px;
+    width: 500px;
+    background-color: rgba(0, 0, 0, 0.4);
+    border-radius: 20px;
+}
+
+
+
+/****************/
+/*  RESPONSIVE  */
+/****************/
+
+/* Screen @768px */
+@media screen and (min-width: 768px) {
+    .container {
+        width: 740px;
+    }
+}
+
+/* Screen @992px */
+@media screen and (min-width: 992px) {
+    .container {
+        width: 960px;
+    }
+}
+
+/* Screen @1200px */
+@media screen and (min-width: 1200px) {
+    .container {
+        width: 1080px;
+    }
+}
 
