--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,10 @@
     display: flex;
 }
 
+.flex-column {
+    flex-direction: column;
+}
+
 .justify-center {
     justify-content: center;
 }
@@ -29,8 +33,10 @@
 
 /* Body */
 body {
+    font-family: 'Pangolin', cursive;
     background-image: url(../img/background.jpg);
     background-size: cover;
+    text-align: center;
 }
 
 /* Header */
@@ -39,7 +45,7 @@ header {
     color: white;
     border-bottom: 1px solid white;
     background-color: var(--main-color);
-    text-align: center;
+    
 }
 
 /* Main */
@@ -47,13 +53,28 @@ main {
     height: calc(100vh - 80px);
 }
 
+#risposta, 
+.megablock {
+    border-radius: 20px;
+}
+
+#risposta {
+    height: 100px;
+    width: 200px;
+    color: white;
+    background-color: var(--main-color);
+}
+
 .megablock {
     height: 700px;
     width: 500px;
     background-color: rgba(0, 0, 0, 0.4);
-    border-radius: 20px;
 }
 
+.megablock p {
+    font-size: 40px;
+    padding: 20px 0px;
+}
 
 
 /****************/
